--- a/preprocess/amharic_preprocess.yaml
+++ b/preprocess/amharic_preprocess.yaml
@@ -4,7 +4,7 @@
 sampling_rate: 22050     # Sampling rate.
 fft_size: 1024           # FFT size.
 hop_size: 256            # Hop size. (fixed value, don't change)
-win_length: null         # Window length.
+win_length: 1024         # Window length.
                          # If set to null, it will be the same as fft_size.
 window: "hann"           # Window function.
 num_mels: 80             # Number of mel basis.
